Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3163. Reuse and tune Inflaters and Deflaters to speed DME processing
  TEZ-3434. Add unit tests for flushing of recovery events.
  TEZ-3317. Speculative execution starts too early due to 0 progress.
  TEZ-3404. Move blocking call for YARN Timeline domain creation from client side to AM.
  TEZ-3272. Add AMContainerImpl and AMNodeImpl to StateMachine visualization list.
  TEZ-3284. Synchronization for every write in UnorderdKVWriter
  TEZ-3426. Second AM attempt launched for session mode and recovery disabled for certain cases
  TEZ-3230. Implement vertex manager and edge manager of cartesian product edge.
  TEZ-3326. Display JVM system properties in AM and task logs.
  TEZ-3009. Errors that occur during container task acquisition are not logged.
  TEZ-2852. TestVertexImpl fails due to race in AsyncDispatcher.
  TEZ-3395. Refactor ShuffleVertexManager to make parts of it re-usable in other plugins.
  TEZ-3413. ConcurrentModificationException in HistoryEventTimelineConversion for AppLaunchedEvent.
  TEZ-3352. MRInputHelpers getStringProperty() should not fail if property value is null.
  TEZ-3409. Log dagId along with other information when submitting a dag.
  TEZ-3384. Fix TestATSV15HistoryLoggingService::testDAGGroupingGroupingEnabled unit test.
  TEZ-3382. Tez analyzer: Should be resilient to new counters.
  TEZ-3379. Tez analyzer: Move sysout to log4j.
  TEZ-3376. Fix groupId generation to account for dagId starting with 1.
  TEZ-3359. Add granular log levels for HistoryLoggingService.
  TEZ-3374. Change TEZ_HISTORY_LOGGING_TIMELINE_NUM_DAGS_PER_GROUP conf key name.
  TEZ-3358. Support using the same TimelineGroupId for multiple DAGs.
  TEZ-3357. Change TimelineCachePlugin to handle DAG grouping.
  TEZ-3348. NullPointerException in Tez MROutput while trying to write using Parquet's DeprecatedParquetOutputFormat.